fix images path

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="pn-intro__picture d-flex d-md-none align-items-center justify-content-end">
-              <img src="/images/index-page/intro/intro-picture.svg" alt="">
+              <img src="./images/index-page/intro/intro-picture.svg" alt="">
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
               <div class="pn-first-task__item pn-first-task__item--height d-flex flex-column align-items-center">
                 <div class="pn-first-task__icon-wrp d-flex align-items-center justify-content-center">
                   <svg class="pn-first-task__icon" >
-                    <use xlink:href="/images/index-page/first-task/monitor-height.svg#monitor"></use>
+                    <use xlink:href="./images/index-page/first-task/monitor-height.svg#monitor"></use>
                   </svg>
                 </div>
                 <span class="pn-first-task__item-text">Первый блок на всю высоту экрана</span>
@@ -118,7 +118,7 @@
               <div class="pn-first-task__item pn-first-task__item--devices d-flex flex-column align-items-center">
                 <div class="pn-first-task__icon-wrp d-flex align-items-center justify-content-center">
                   <svg class="pn-first-task__icon">
-                    <use xlink:href="/images/index-page/first-task/devices.svg#devices"></use>
+                    <use xlink:href="./images/index-page/first-task/devices.svg#devices"></use>
                   </svg>
                 </div>
                 <span class="pn-first-task__item-text">Отзывчивая верстка</span>
@@ -133,10 +133,10 @@
           <picture class="pn-figma__picture d-block d-md-none">
             <source
               type="image/webp"
-              srcset="/images/index-page/figma/figma-windows.webp 1x, /images/index-page/figma/figma-windows_2x.webp 2x">
+              srcset="./images/index-page/figma/figma-windows.webp 1x, ./images/index-page/figma/figma-windows_2x.webp 2x">
             <img
-              srcset="/images/index-page/figma/figma-windows.png 1x, /images/index-page/figma/figma-windows_2x.png 2x"
-              src="/images/index-page/figma/figma-windows.png" alt="">
+              srcset="./images/index-page/figma/figma-windows.png 1x, ./images/index-page/figma/figma-windows_2x.png 2x"
+              src="./images/index-page/figma/figma-windows.png" alt="">
           </picture>
           <div class="pn-figma__info d-md-flex flex-column align-items-md-center">
             <div class="pn-figma__title-wrp pn-section__title-wrp align-items-md-center">
@@ -144,8 +144,8 @@
               <h2 class="pn-figma__title pn-section__title">Как ускорить процесс</h2>
               <picture class="pn-figma__picture d-none d-md-block">
                 <img
-                  srcset="/images/index-page/figma/figma-windows.png 1x, /images/index-page/figma/figma-windows_2x.png 2x"
-                  src="/images/index-page/figma/figma-windows.png" alt="">
+                  srcset="./images/index-page/figma/figma-windows.png 1x, ./images/index-page/figma/figma-windows_2x.png 2x"
+                  src="./images/index-page/figma/figma-windows.png" alt="">
               </picture>
               <p class="pn-figma__description pn-section__description">Чтобы иметь доступ ко всем функциям и возможностям Figma, которые облегчат и ускорят процесс верстки, зарегистрируйся и залогинься в системе.</p>
             </div>
@@ -246,10 +246,10 @@
                               <picture class="pn-shoe-card__img d-block">
                                 <source
                                   type="image/webp"
-                                  srcset="/images/index-page/shoes-slider/shoes-item-1.webp 1x, /images/index-page/shoes-slider/shoes-item-1_2x.webp 2x">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-1.webp 1x, ./images/index-page/shoes-slider/shoes-item-1_2x.webp 2x">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-1.png 1x, /images/index-page/shoes-slider/shoes-item-1.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-1.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-1.png 1x, ./images/index-page/shoes-slider/shoes-item-1.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-1.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -289,11 +289,11 @@
                             <div class="pn-shoe-card__img-wrp d-flex align-items-center justify-content-center">
                               <picture class="pn-shoe-card__img d-block">
                                 <source
-                                  srcset="/images/index-page/shoes-slider/shoes-item-2_2x.webp 2x, /images/index-page/shoes-slider/shoes-item-2.webp 1x"
+                                  srcset="./images/index-page/shoes-slider/shoes-item-2_2x.webp 2x, ./images/index-page/shoes-slider/shoes-item-2.webp 1x"
                                   type="image/webp">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-2_2x.png 2x, /images/index-page/shoes-slider/shoes-item-2.png 1x"
-                                  src="/images/index-page/shoes-slider/shoes-item-2.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-2_2x.png 2x, ./images/index-page/shoes-slider/shoes-item-2.png 1x"
+                                  src="./images/index-page/shoes-slider/shoes-item-2.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -333,11 +333,11 @@
                             <div class="pn-shoe-card__img-wrp d-flex align-items-center justify-content-center">
                               <picture class="pn-shoe-card__img d-block">
                                 <source
-                                  srcset="/images/index-page/shoes-slider/shoes-item-3.webp 1x, /images/index-page/shoes-slider/shoes-item-3_2x.webp 2x"
+                                  srcset="./images/index-page/shoes-slider/shoes-item-3.webp 1x, ./images/index-page/shoes-slider/shoes-item-3_2x.webp 2x"
                                   type="image/webp">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-3.png 1x, /images/index-page/shoes-slider/shoes-item-3_2x.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-3.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-3.png 1x, ./images/index-page/shoes-slider/shoes-item-3_2x.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-3.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -377,11 +377,11 @@
                             <div class="pn-shoe-card__img-wrp d-flex align-items-center justify-content-center">
                               <picture class="pn-shoe-card__img d-block">
                                 <source
-                                  srcset="/images/index-page/shoes-slider/shoes-item-4.webp 1x, /images/index-page/shoes-slider/shoes-item-4_2x.webp 2x"
+                                  srcset="./images/index-page/shoes-slider/shoes-item-4.webp 1x, ./images/index-page/shoes-slider/shoes-item-4_2x.webp 2x"
                                   type="image/webp">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-4.png 1x, /images/index-page/shoes-slider/shoes-item-4_2x.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-4.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-4.png 1x, ./images/index-page/shoes-slider/shoes-item-4_2x.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-4.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -422,10 +422,10 @@
                               <picture class="pn-shoe-card__img d-block">
                                 <source
                                   type="image/webp"
-                                  srcset="/images/index-page/shoes-slider/shoes-item-1.webp 1x, /images/index-page/shoes-slider/shoes-item-1_2x.webp 2x">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-1.webp 1x, ./images/index-page/shoes-slider/shoes-item-1_2x.webp 2x">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-1.png 1x, /images/index-page/shoes-slider/shoes-item-1.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-1.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-1.png 1x, ./images/index-page/shoes-slider/shoes-item-1.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-1.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -465,11 +465,11 @@
                             <div class="pn-shoe-card__img-wrp d-flex align-items-center justify-content-center">
                               <picture class="pn-shoe-card__img d-block">
                                 <source
-                                  srcset="/images/index-page/shoes-slider/shoes-item-2_2x.webp 2x, /images/index-page/shoes-slider/shoes-item-2.webp 1x"
+                                  srcset="./images/index-page/shoes-slider/shoes-item-2_2x.webp 2x, ./images/index-page/shoes-slider/shoes-item-2.webp 1x"
                                   type="image/webp">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-2_2x.png 2x, /images/index-page/shoes-slider/shoes-item-2.png 1x"
-                                  src="/images/index-page/shoes-slider/shoes-item-2.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-2_2x.png 2x, ./images/index-page/shoes-slider/shoes-item-2.png 1x"
+                                  src="./images/index-page/shoes-slider/shoes-item-2.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -509,11 +509,11 @@
                             <div class="pn-shoe-card__img-wrp d-flex align-items-center justify-content-center">
                               <picture class="pn-shoe-card__img d-block">
                                 <source
-                                  srcset="/images/index-page/shoes-slider/shoes-item-3.webp 1x, /images/index-page/shoes-slider/shoes-item-3_2x.webp 2x"
+                                  srcset="./images/index-page/shoes-slider/shoes-item-3.webp 1x, ./images/index-page/shoes-slider/shoes-item-3_2x.webp 2x"
                                   type="image/webp">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-3.png 1x, /images/index-page/shoes-slider/shoes-item-3_2x.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-3.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-3.png 1x, ./images/index-page/shoes-slider/shoes-item-3_2x.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-3.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -553,11 +553,11 @@
                             <div class="pn-shoe-card__img-wrp d-flex align-items-center justify-content-center">
                               <picture class="pn-shoe-card__img d-block">
                                 <source
-                                  srcset="/images/index-page/shoes-slider/shoes-item-4.webp 1x, /images/index-page/shoes-slider/shoes-item-4_2x.webp 2x"
+                                  srcset="./images/index-page/shoes-slider/shoes-item-4.webp 1x, ./images/index-page/shoes-slider/shoes-item-4_2x.webp 2x"
                                   type="image/webp">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-4.png 1x, /images/index-page/shoes-slider/shoes-item-4_2x.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-4.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-4.png 1x, ./images/index-page/shoes-slider/shoes-item-4_2x.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-4.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
@@ -598,10 +598,10 @@
                               <picture class="pn-shoe-card__img d-block">
                                 <source
                                   type="image/webp"
-                                  srcset="/images/index-page/shoes-slider/shoes-item-1.webp 1x, /images/index-page/shoes-slider/shoes-item-1_2x.webp 2x">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-1.webp 1x, ./images/index-page/shoes-slider/shoes-item-1_2x.webp 2x">
                                 <img
-                                  srcset="/images/index-page/shoes-slider/shoes-item-1.png 1x, /images/index-page/shoes-slider/shoes-item-1.png 2x"
-                                  src="/images/index-page/shoes-slider/shoes-item-1.png" alt="">
+                                  srcset="./images/index-page/shoes-slider/shoes-item-1.png 1x, ./images/index-page/shoes-slider/shoes-item-1.png 2x"
+                                  src="./images/index-page/shoes-slider/shoes-item-1.png" alt="">
                               </picture>
                             </div>
                             <span class="pn-shoe-card__title">New Balance 840 90s</span>
