fix links paths and svg

--- a/src/templates/error-404.html
+++ b/src/templates/error-404.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-  <link href="/favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-  <link href="/favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-  <link href="/favicon/site.webmanifest" rel="manifest">
-  <link href="/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#5bbad5">
+  <link href="./favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="./favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="./favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="./favicon/site.webmanifest" rel="manifest">
+  <link href="./favicon/safari-pinned-tab.svg" rel="mask-icon" color="#5bbad5">
 
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
@@ -27,10 +27,10 @@
       <div class="pn-container">
         <div class="pn-header__wrp d-flex align-items-center">
           <div class="pn-header__logo d-flex">
-            <a href="/">
+            <a href="./">
               <svg class="pn-header__icon-logo flex-shrink-0">
-                <use class="pn-header__icon-full" xlink:href="/images/logo/logo-full.svg#logo"></use>
-                <use class="pn-header__icon-without-label" xlink:href="/images/logo/logo-without-label.svg#logo"></use>
+                <use class="pn-header__icon-full" xlink:href="./images/logo/logo-full.svg#logo"></use>
+                <use class="pn-header__icon-without-label" xlink:href="./images/logo/logo-without-label.svg#logo"></use>
               </svg>
             </a>
           </div>
@@ -74,11 +74,11 @@
       <section class="pn-section pn-error-404">
         <div class="pn-container flex-column align-items-center justify-content-center text-center">
           <svg class="pn-error-404__icon">
-            <use xlink:href="/images/error-page/error-404.svg#error-404"></use>
+            <use xlink:href="./images/error-page/error-404.svg#error-404"></use>
           </svg>
           <h2 class="pn-error-404__title">Страница не найдена</h2>
           <p class="pn-error-404__desc">К сожалению, такой страницы нет. Либо администратор сайта ее удалил, либо ее никогда не существовало. Попробуйте проверить адрес страницы или начните с Главной.</p>
-          <a class="pn-btn" href="/">На главную</a>
+          <a class="pn-btn" href="./">На главную</a>
         </div>
       </section>
 
