--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-  <link href="/favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-  <link href="/favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-  <link href="/favicon/site.webmanifest" rel="manifest">
-  <link href="/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#5bbad5">
+  <link href="./favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="./favicon/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="./favicon/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="./favicon/site.webmanifest" rel="manifest">
+  <link href="./favicon/safari-pinned-tab.svg" rel="mask-icon" color="#5bbad5">
 
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
@@ -28,26 +28,26 @@
         <div class="pn-header__wrp d-flex align-items-center">
           <div class="pn-header__logo d-flex">
             <svg class="pn-header__icon-logo flex-shrink-0">
-              <use class="pn-header__icon-full" xlink:href="/images/logo/logo-full.svg#logo"></use>
-              <use class="pn-header__icon-without-label" xlink:href="/images/logo/logo-without-label.svg#logo"></use>
+              <use class="pn-header__icon-full" xlink:href="./images/logo/logo-full.svg#logo"></use>
+              <use class="pn-header__icon-without-label" xlink:href="./images/logo/logo-without-label.svg#logo"></use>
             </svg>
           </div>
           <nav class="pn-header__nav align-items-center justify-content-center flex-grow-1">
             <ul class="pn-header__menu-list d-flex">
               <li class="pn-header__menu-item">
-                <a class="pn-header__menu-link js-menu-link" href="/error-404.html">Это меню</a>
+                <a class="pn-header__menu-link js-menu-link" href="./error-404.html">Это меню</a>
               </li>
               <li class="pn-header__menu-item">
-                <a class="pn-header__menu-link js-menu-link" href="/error-404.html">Должно</a>
+                <a class="pn-header__menu-link js-menu-link" href="./error-404.html">Должно</a>
               </li>
               <li class="pn-header__menu-item">
-                <a class="pn-header__menu-link js-menu-link" href="/error-404.html">Быть</a>
+                <a class="pn-header__menu-link js-menu-link" href="./error-404.html">Быть</a>
               </li>
               <li class="pn-header__menu-item">
-                <a class="pn-header__menu-link js-menu-link" href="/error-404.html">Закрепленным</a>
+                <a class="pn-header__menu-link js-menu-link" href="./error-404.html">Закрепленным</a>
               </li>
               <li class="pn-header__menu-item">
-                <a class="pn-header__menu-link js-menu-link" href="/error-404.html">При скролле</a>
+                <a class="pn-header__menu-link js-menu-link" href="./error-404.html">При скролле</a>
               </li>
             </ul>
           </nav>
@@ -149,7 +149,7 @@
               </picture>
               <p class="pn-figma__description pn-section__description">Чтобы иметь доступ ко всем функциям и возможностям Figma, которые облегчат и ускорят процесс верстки, зарегистрируйся и залогинься в системе.</p>
             </div>
-            <a class="pn-figma__btn-signup pn-btn" href="/error-404.html">Зарегистрироваться</a>
+            <a class="pn-figma__btn-signup pn-btn" href="./error-404.html">Зарегистрироваться</a>
           </div>
         </div>
       </section>
@@ -220,12 +220,12 @@
                   <div class="pn-shoes-slider__actions d-flex flex-column flex-md-row-reverse align-items-center justify-content-md-between">
                     <button class="pn-shoes-slider__btn-nav pn-shoes-slider__btn-nav--next flex-center js-slider-btn-next">
                       <svg class="pn-shoes-slider__btn-arrow">
-                        <use xlink:href="/images/sprite/icons-sprite.svg#icon-arrow-right"></use>
+                        <use xlink:href="./images/sprite/icons-sprite.svg#icon-arrow-right"></use>
                       </svg>
                     </button>
                     <button class="pn-shoes-slider__btn-nav pn-shoes-slider__btn-nav--prev flex-center js-slider-btn-prev">
                       <svg class="pn-shoes-slider__btn-arrow">
-                        <use xlink:href="/images/sprite/icons-sprite.svg#icon-arrow-left"></use>
+                        <use xlink:href="./images/sprite/icons-sprite.svg#icon-arrow-left"></use>
                       </svg>
                     </button>
                   </div>
@@ -238,7 +238,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -282,7 +282,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -326,7 +326,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -370,7 +370,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -414,7 +414,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -458,7 +458,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -502,7 +502,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -546,7 +546,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -590,7 +590,7 @@
                         <div class="pn-shoe-card js-shoe-card">
                           <button class="pn-shoe-card__btn-favorite js-btn-favorite d-flex">
                             <svg class="pn-shoe-card__icon pn-shoe-card__icon-favorite pn-svg">
-                              <use xlink:href="/images/sprite/icons-sprite.svg#icon-hearth"></use>
+                              <use xlink:href="./images/sprite/icons-sprite.svg#icon-hearth"></use>
                             </svg>
                           </button>
                           <div class="pn-shoe-card__info d-flex flex-column align-items-start">
@@ -654,7 +654,7 @@
                   <th></th>
                   <th class="pn-table-section__header-cell pn-table-section__cell-standard">
                     <svg class="pn-table-section__tariff-icon">
-                      <use xlink:href="/images/index-page/table-section/rocket-standard.svg#rocket"></use>
+                      <use xlink:href="./images/index-page/table-section/rocket-standard.svg#rocket"></use>
                     </svg>
                     <span class="pn-table-section__tariff-name">Стандартный</span>
                     <p class="pn-table-section__tariff-desc">
@@ -663,7 +663,7 @@
                   </th>
                   <th class="pn-table-section__header-cell pn-table-section__cell-optimal">
                     <svg class="pn-table-section__tariff-icon">
-                      <use xlink:href="/images/index-page/table-section/rocket-optimal.svg#rocket"></use>
+                      <use xlink:href="./images/index-page/table-section/rocket-optimal.svg#rocket"></use>
                     </svg>
                     <span class="pn-table-section__tariff-name">Оптимальный</span>
                     <p class="pn-table-section__tariff-desc">
@@ -672,7 +672,7 @@
                   </th>
                   <th class="pn-table-section__header-cell pn-table-section__cell-premium">
                     <svg class="pn-table-section__tariff-icon">
-                      <use xlink:href="/images/index-page/table-section/rocket-premium.svg#rocket"></use>
+                      <use xlink:href="./images/index-page/table-section/rocket-premium.svg#rocket"></use>
                     </svg>
                     <span class="pn-table-section__tariff-name">Премиум</span>
                     <p class="pn-table-section__tariff-desc">
@@ -711,12 +711,12 @@
                   <td class="pn-table-section__cell-standard"><span class="ot-table__empty-value">—</span></td>
                   <td class="pn-table-section__cell-optimal">
                     <svg class="ot-table__icon-check">
-                      <use xlink:href="/images/sprite/icons-sprite.svg#icon-check"></use>
+                      <use xlink:href="./images/sprite/icons-sprite.svg#icon-check"></use>
                     </svg>
                   </td>
                   <td class="pn-table-section__cell-premium">
                     <svg class="ot-table__icon-check">
-                      <use xlink:href="/images/sprite/icons-sprite.svg#icon-check"></use>
+                      <use xlink:href="./images/sprite/icons-sprite.svg#icon-check"></use>
                     </svg>
                   </td>
                 </tr>
@@ -736,7 +736,7 @@
                   </td>
                   <td class="pn-table-section__cell-premium">
                     <svg class="ot-table__icon-check">
-                      <use xlink:href="/images/sprite/icons-sprite.svg#icon-check"></use>
+                      <use xlink:href="./images/sprite/icons-sprite.svg#icon-check"></use>
                     </svg>
                   </td>
                 </tr>
@@ -747,12 +747,12 @@
                   </td>
                   <td class="pn-table-section__cell-optimal">
                     <svg class="ot-table__icon-check">
-                      <use xlink:href="/images/sprite/icons-sprite.svg#icon-check"></use>
+                      <use xlink:href="./images/sprite/icons-sprite.svg#icon-check"></use>
                     </svg>
                   </td>
                   <td class="pn-table-section__cell-premium">
                     <svg class="ot-table__icon-check">
-                      <use xlink:href="/images/sprite/icons-sprite.svg#icon-check"></use>
+                      <use xlink:href="./images/sprite/icons-sprite.svg#icon-check"></use>
                     </svg>
                   </td>
                 </tr>
@@ -766,7 +766,7 @@
                   </td>
                   <td class="pn-table-section__cell-premium">
                     <svg class="ot-table__icon-check">
-                      <use xlink:href="/images/sprite/icons-sprite.svg#icon-check"></use>
+                      <use xlink:href="./images/sprite/icons-sprite.svg#icon-check"></use>
                     </svg>
                   </td>
                 </tr>
